Made FileWritePacketHandler compatible with Java 7/8